<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hiphop"
    android:layout_width="wrap_content"
    android:padding="2dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:padding="2dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="0dp"
            tools:text="@string/news_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dateTextColor" />

        <TextView
            android:id="@+id/news_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="41dp"
            tools:text="@string/news_section" />

        <TextView
            android:id="@+id/news_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:padding="2dp"
            android:textAllCaps="true"
            android:textColor="@color/dateTextColor"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/news_section"
            tools:layout_editor_absoluteX="240dp"
            tools:text="@string/news_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:textColor="@color/dateTextColor"
                android:textSize="12sp"
                android:text="@string/author_title" />

            <TextView
                android:id="@+id/news_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="4dp"
                android:textAllCaps="true"
                android:textColor="@color/dateTextColor"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/news_section"
                tools:layout_editor_absoluteX="240dp"
                tools:text="@string/news_author" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>